; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_resource.c_devm_region_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_resource.c_devm_region_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.region_devres = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i8*)* @devm_region_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @devm_region_release(%struct.device* %0, i8* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.region_devres*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.region_devres*
  store %struct.region_devres* %7, %struct.region_devres** %5, align 8
  %8 = load %struct.region_devres*, %struct.region_devres** %5, align 8
  %9 = getelementptr inbounds %struct.region_devres, %struct.region_devres* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.region_devres*, %struct.region_devres** %5, align 8
  %12 = getelementptr inbounds %struct.region_devres, %struct.region_devres* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.region_devres*, %struct.region_devres** %5, align 8
  %15 = getelementptr inbounds %struct.region_devres, %struct.region_devres* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @__release_region(i32 %10, i32 %13, i32 %16)
  ret void
}

declare dso_local i32 @__release_region(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
